--- a/css/styles.css
+++ b/css/styles.css
@@ -2,63 +2,49 @@
 * {
     box-sizing: border-box;
   }
+body{
+    background-color: rgb(212, 197, 156);
+}
 .header{
     text-decoration: underline;
     text-align: center;
     border: 5px solid red;
     padding: 15px;
-    background-color: #6521e4;
+    background-color: #b097dd;
 }
-div main ul {
-    position: relative;
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
 }
-
-div main ul li{
-    position: relative;
-    list-style: none;
-    width: 100px;
-    padding: 15px;
-    background: #b7dee0;
-    z-index: calc(1*var(--i));
-    right: 70px;
-    text-align: center;
-}
-div main ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    display: block;
-    background: #f44335;
-    margin: auto;
-    transition: 0.5s;
-}
-div main ul li:hover::after{
-    width: 100%;
-}
-
 .menu {
-    width: 20%;
     float: left;
     padding: 15px;
     border: 5px solid rgb(0, 0, 0);
     text-align: center;
 }
 .main {
-    width: 50%;
     float: left;
     padding: 15px;
     border: 5px solid rgb(255, 187, 0);
+    background-color: #0099cc;
 }
 .secondary{
-    width: 30%;
     float: left;
     padding: 15px;
     border: 5px solid rgb(180, 109, 109);
 }
-
+.footer {
+    background-color: #0099cc;
+    color: #ffffff;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
+}
 html{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: larger;
+    color: #ffffff;
 }
 
 .menu ul {
@@ -75,4 +61,41 @@ html{
 }
 .menu li:hover {
     background-color: #0099cc;
+}
+
+@media only screen and (max-width:768px){
+    /*for mobile phone*/
+    [class*="col-"]{
+        width: 100%;
+    }
+}
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
 }
