--- a/css/styles.css
+++ b/css/styles.css
@@ -99,3 +99,9 @@ html{
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
 }
+img {
+    max-width: 100%;
+}
+video{
+    max-width: 100%;
+}
